--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
 	"require": {
 		"php": ">=5.2.8",
 		"ext-mcrypt": "*"
+		"phpunit/phpunit": "3.7.*",
+		"cakephp/debug_kit" : "2.2.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*",
