--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	},
 	"require": {
 		"php": ">=5.2.8",
-		"ext-mcrypt": "*"
+		"ext-mcrypt": "*",
 		"phpunit/phpunit": "3.7.*",
 		"cakephp/debug_kit" : "2.2.*"
 	},
